# api-monitoramento

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  constants.py  database.py  dependencies.py  main.py  models.py  schemas.py
app/api/: routes.py
app/services/: automation.py  collector.py  crypto.py  monitoring.py  ssh.py
tests/: test_automation.py  test_status.py
