[project]
name = "api-monitoramento"
version = "0.1.0"
description = "API para monitoramento de servidores Linux e containers Docker via SSH."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20.0,<1.0.0",
    "asyncssh>=2.17.0,<3.0.0",
    "cryptography>=43.0.0,<44.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "orjson>=3.10.0,<4.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "uvicorn[standard]>=0.32.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0,<1.0.0",
    "pytest>=8.3.0,<9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.hatch.build.targets.wheel]
packages = ["app"]
